tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/int_to_str.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
const x:str = 5

